// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Patterns/Time Picker Cozy And Compact Mode 1`] = `
<div
  class="fd-container"
  style="height:550px"
>
  

  <div
    class="fd-row"
  >
    
  
    <div
      class="fd-col fd-col--6"
    >
      
    
      <label
        for="cozyTimepicker"
      >
        Cozy Timepicker
      </label>
      <br />
      
    
      <div
        class="fd-popover fd-popover--no-arrow"
      >
        
      
        <div
          class="fd-popover__control"
        >
          
        
          <div
            class="fd-input-group"
          >
            
          
            <input
              class="fd-input fd-input-group__input"
              id="cozyTimepicker"
              onfocus="
              setElAttr('rKLOR811', 'aria-hidden', 'false');
              setElAttr('sajdisa8fisfj', 'aria-expanded', 'true');
            "
              placeholder="hh:mm:ss am/pm"
              type="text"
              value="4:25:10 PM"
            />
            
          
            <span
              class="fd-input-group__addon fd-input-group__addon--button"
            >
              
                      
              <button
                aria-controls="rKLOR811"
                aria-expanded="true"
                aria-haspopup="true"
                aria-label="show/hide time picker"
                class="fd-input-group__button fd-button fd-button--transparent fd-popover__control"
                id="sajdisa8fisfj"
                onclick="
                            toggleElAttrs('rKLOR811', ['aria-hidden']);
                            toggleElAttrs('sajdisa8fisfj', ['aria-expanded']);
                        "
              >
                
                          
                <i
                  class="sap-icon--time-entry-request"
                />
                
                      
              </button>
              
                  
            </span>
            
        
          </div>
          
      
        </div>
        
      
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--no-arrow"
          id="rKLOR811"
        >
          
        
          <div
            class="fd-time fd-time--scrollable"
          >
            
          
            <div
              class="fd-time__col"
            >
              
            
              <label
                class="fd-time__slider-label fd-form-label"
              >
                Hrs
              </label>
              
            
              <button
                aria-label="Increase hours"
                class="fd-button fd-button fd-button--transparent"
              >
                
              
                <i
                  class="sap-icon--navigation-up-arrow"
                />
                
            
              </button>
              
            
              <div
                class="fd-time__wrapper fd-time__wrapper--active"
              >
                
              
                <ul
                  class="fd-time__list"
                >
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      01
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      02
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      03
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <div
                      class="fd-time__current-indicator"
                    />
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      
                                  04
                              
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      05
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      06
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      07
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      08
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      09
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      10
                    </span>
                    
                
                  </li>
                  
              
                </ul>
                
            
              </div>
              
            
              <button
                aria-label="Decrease hours"
                class="fd-button fd-button fd-button--transparent"
              >
                
              
                <i
                  class="sap-icon--navigation-down-arrow"
                />
                
            
              </button>
              
          
            </div>
            
          
            <div
              class="fd-time__col"
            >
              
            
              <label
                class="fd-time__slider-label fd-form-label"
              >
                Min
              </label>
              
            
              <div
                class="fd-time__wrapper"
              >
                
              
                <span
                  class="fd-time__item fd-time__item--collapsed"
                >
                  25
                </span>
                
            
              </div>
              
          
            </div>
            
          
            <div
              class="fd-time__col"
            >
              
            
              <label
                class="fd-time__slider-label fd-form-label"
              >
                Sec
              </label>
              
            
              <div
                class="fd-time__wrapper"
              >
                
              
                <span
                  class="fd-time__item fd-time__item--collapsed"
                >
                  10
                </span>
                
            
              </div>
              
          
            </div>
            
        
          </div>
          
        
          <div
            class="fd-popover__body-footer"
          >
            
          
            <div
              class="fd-bar fd-bar--cozy fd-bar--footer"
            >
              
            
              <div
                class="fd-bar__right"
              >
                
              
                <div
                  class="fd-bar__element"
                >
                  
                
                  <button
                    class="fd-button fd-button--emphasized"
                  >
                    OK
                  </button>
                  
              
                </div>
                
              
                <div
                  class="fd-bar__element"
                >
                  
                
                  <button
                    class="fd-button fd-button--transparent"
                  >
                    Cancel
                  </button>
                  
              
                </div>
                
            
              </div>
              
          
            </div>
            
        
          </div>
          
      
        </div>
        
    
      </div>
      
  
    </div>
    
  
    <div
      class="fd-col fd-col--6"
    >
      
    
      <label
        class="fd-form-label"
        for="compactTimepicker"
      >
        Compact Timepicker
      </label>
      <br />
      
    
      <div
        class="fd-popover fd-popover--no-arrow"
      >
        
      
        <div
          class="fd-popover__control"
        >
          
        
          <div
            class="fd-input-group"
          >
            
          
            <input
              class="fd-input fd-input-group__input fd-input--compact"
              id="compactTimepicker"
              onfocus="
              setElAttr('rKGNR811', 'aria-hidden', 'false');
              setElAttr('maskdjasd98a', 'aria-expanded', 'true');
            "
              placeholder="hh:mm:ss am/pm"
              type="text"
              value="4:25:10 PM"
            />
            
          
            <span
              class="fd-input-group__addon fd-input-group__addon--button fd-input-group__addon--compact"
            >
              
                    
              <button
                aria-controls="rKGNR811"
                aria-expanded="true"
                aria-haspopup="true"
                aria-label="show/hide time picker"
                class="fd-input-group__button fd-button fd-button--compact fd-button--transparent fd-popover__control"
                id="maskdjasd98a"
                onclick="
                          toggleElAttrs('rKGNR811', ['aria-hidden']);
                          toggleElAttrs('maskdjasd98a', ['aria-expanded']);
                      "
              >
                
                        
                <i
                  class="sap-icon--time-entry-request"
                />
                
                    
              </button>
              
                
            </span>
            
        
          </div>
          
      
        </div>
        
      
        <div
          aria-hidden="false"
          class="fd-popover__body fd-popover__body--no-arrow"
          id="rKGNR811"
        >
          
        
          <div
            class="fd-time fd-time--scrollable fd-time--compact"
          >
            
          
            <div
              class="fd-time__col"
            >
              
            
              <label
                class="fd-time__slider-label fd-form-label"
              >
                Hrs
              </label>
              
            
              <button
                aria-label="Increase hours"
                class="fd-button fd-button--compact fd-button--transparent"
              >
                
              
                <i
                  class="sap-icon--navigation-up-arrow"
                />
                
            
              </button>
              
            
              <div
                class="fd-time__wrapper fd-time__wrapper--active"
              >
                
              
                <ul
                  class="fd-time__list"
                >
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      01
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      02
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      03
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <div
                      class="fd-time__current-indicator"
                    />
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      
                                04
                            
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      05
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      06
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      07
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      08
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      09
                    </span>
                    
                
                  </li>
                  
                
                  <li
                    class="fd-time__item"
                  >
                    
                  
                    <span
                      class="fd-time__unit"
                    >
                      10
                    </span>
                    
                
                  </li>
                  
              
                </ul>
                
            
              </div>
              
            
              <button
                aria-label="Decrease hours"
                class="fd-button fd-button--compact fd-button--transparent"
              >
                
              
                <i
                  class="sap-icon--navigation-down-arrow"
                />
                
            
              </button>
              
          
            </div>
            
          
            <div
              class="fd-time__col"
            >
              
            
              <label
                class="fd-time__slider-label fd-form-label"
              >
                Min
              </label>
              
            
              <div
                class="fd-time__wrapper"
              >
                
              
                <span
                  class="fd-time__item fd-time__item--collapsed"
                >
                  25
                </span>
                
            
              </div>
              
          
            </div>
            
          
            <div
              class="fd-time__col"
            >
              
            
              <label
                class="fd-time__slider-label fd-form-label"
              >
                Sec
              </label>
              
            
              <div
                class="fd-time__wrapper"
              >
                
              
                <span
                  class="fd-time__item fd-time__item--collapsed"
                >
                  10
                </span>
                
            
              </div>
              
          
            </div>
            
          
            <div
              class="fd-time__col"
            >
              
            
              <label
                class="fd-time__slider-label fd-form-label"
              >
                AM/PM
              </label>
              
            
              <div
                class="fd-time__wrapper fd-time__wrapper--meridian"
              >
                
              
                <span
                  class="fd-time__item fd-time__item--collapsed"
                >
                  AM
                </span>
                
            
              </div>
              
          
            </div>
            
        
          </div>
          
        
          <div
            class="fd-popover__body-footer"
          >
            
          
            <div
              class="fd-bar fd-bar--cozy fd-bar--footer"
            >
              
            
              <div
                class="fd-bar__right"
              >
                
              
                <div
                  class="fd-bar__element"
                >
                  
                
                  <button
                    class="fd-button fd-button--compact fd-button--emphasized"
                  >
                    OK
                  </button>
                  
              
                </div>
                
              
                <div
                  class="fd-bar__element"
                >
                  
                
                  <button
                    class="fd-button fd-button--compact fd-button--transparent"
                  >
                    Cancel
                  </button>
                  
              
                </div>
                
            
              </div>
              
          
            </div>
            
        
          </div>
          
      
        </div>
        
    
      </div>
      
  
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Patterns/Time Picker Tablet Mode 1`] = `
<div
  style="min-height: 580px;"
>
  
    
  <label
    for="tabletTimepicker"
  >
    Cozy Timepicker
  </label>
  <br />
  
    
  <div
    class="fd-popover fd-popover--no-arrow"
  >
    
        
    <div
      class="fd-popover__control"
    >
      
            
      <div
        class="fd-input-group"
      >
        
                
        <input
          class="fd-input fd-input-group__input"
          id="tabletTimepicker"
          onfocus="
                    setElAttr('rKLHJ5311', 'aria-hidden', 'false');
                    setElAttr('a09dahsdkln', 'aria-expanded', 'true');
                  "
          placeholder="hh:mm:ss am/pm"
          type="text"
          value="4:25:10 PM"
        />
        
                
        <span
          class="fd-input-group__addon fd-input-group__addon--button"
        >
          
                    
          <button
            aria-controls="rKLHJ5311"
            aria-expanded="true"
            aria-haspopup="true"
            aria-label="show/hide time picker"
            class="fd-input-group__button fd-button fd-button--transparent fd-popover__control"
            id="a09dahsdkln"
            onclick="
                          toggleElAttrs('rKLHJ5311', ['aria-hidden']);
                          toggleElAttrs('a09dahsdkln', ['aria-expanded']);
                      "
          >
            
                        
            <i
              class="sap-icon--time-entry-request"
            />
            
                    
          </button>
          
                
        </span>
        
            
      </div>
      
        
    </div>
    
        
    <div
      aria-hidden="false"
      class="fd-popover__body fd-popover__body--no-arrow"
      id="rKLHJ5311"
    >
      
            
      <div
        class="fd-time fd-time--scrollable fd-time--tablet"
      >
        
                
        <div
          class="fd-time__col"
        >
          
                    
          <label
            class="fd-time__slider-label fd-form-label"
          >
            Hrs
          </label>
          
                    
          <button
            aria-label="Increase hours"
            class="fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--navigation-up-arrow"
            />
            
                    
          </button>
          
                    
          <div
            class="fd-time__wrapper fd-time__wrapper--active"
          >
            
                    
            <ul
              class="fd-time__list"
            >
              
                        
              <li
                class="fd-time__item"
              >
                
                            
                <span
                  class="fd-time__unit"
                >
                  01
                </span>
                
                        
              </li>
              
                        
              <li
                class="fd-time__item"
              >
                
                            
                <span
                  class="fd-time__unit"
                >
                  02
                </span>
                                    
                        
              </li>
              
                        
              <li
                class="fd-time__item"
              >
                
                            
                <span
                  class="fd-time__unit"
                >
                  03
                </span>
                
                        
              </li>
              
                        
              <li
                class="fd-time__item"
              >
                
                            
                <div
                  class="fd-time__current-indicator"
                />
                
                            
                <span
                  class="fd-time__unit"
                >
                  
                                04
                            
                </span>
                
                        
              </li>
              
                        
              <li
                class="fd-time__item"
              >
                
                            
                <span
                  class="fd-time__unit"
                >
                  05
                </span>
                
                        
              </li>
              
                        
              <li
                class="fd-time__item"
              >
                
                            
                <span
                  class="fd-time__unit"
                >
                  06
                </span>
                
                        
              </li>
              
                        
              <li
                class="fd-time__item"
              >
                
                            
                <span
                  class="fd-time__unit"
                >
                  07
                </span>
                
                        
              </li>
              
                        
              <li
                class="fd-time__item"
              >
                
                            
                <span
                  class="fd-time__unit"
                >
                  08
                </span>
                
                        
              </li>
              
                        
              <li
                class="fd-time__item"
              >
                
                            
                <span
                  class="fd-time__unit"
                >
                  09
                </span>
                
                        
              </li>
              
                        
              <li
                class="fd-time__item"
              >
                
                            
                <span
                  class="fd-time__unit"
                >
                  10
                </span>
                
                        
              </li>
              
                    
            </ul>
            
                    
          </div>
          
                    
          <button
            aria-label="Decrease hours"
            class="fd-button fd-button fd-button--transparent"
          >
            
                        
            <i
              class="sap-icon--navigation-down-arrow"
            />
            
                    
          </button>
          
                
        </div>
        
                
        <div
          class="fd-time__col"
        >
          
                    
          <label
            class="fd-time__slider-label fd-form-label"
          >
            Min
          </label>
          
                    
          <div
            class="fd-time__wrapper"
          >
            
                        
            <span
              class="fd-time__item fd-time__item--collapsed"
            >
              25
            </span>
            
                    
          </div>
          
                
        </div>
        
                
        <div
          class="fd-time__col"
        >
          
                    
          <label
            class="fd-time__slider-label fd-form-label"
          >
            Sec
          </label>
          
                    
          <div
            class="fd-time__wrapper"
          >
            
                        
            <span
              class="fd-time__item fd-time__item--collapsed"
            >
              10
            </span>
            
                    
          </div>
          
                
        </div>
        
                
        <div
          class="fd-time__col"
        >
          
                    
          <label
            class="fd-time__slider-label fd-form-label"
          >
            AM/PM
          </label>
          
                    
          <div
            class="fd-time__wrapper fd-time__wrapper--meridian"
          >
            
                        
            <span
              class="fd-time__item fd-time__item--collapsed"
            >
              AM
            </span>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
      <div
        class="fd-popover__body-footer"
      >
        
                
        <div
          class="fd-bar fd-bar--cozy fd-bar--footer"
        >
          
                    
          <div
            class="fd-bar__right"
          >
            
                        
            <div
              class="fd-bar__element"
            >
              
                            
              <button
                class="fd-button fd-button--emphasized"
              >
                OK
              </button>
              
                        
            </div>
            
                        
            <div
              class="fd-bar__element"
            >
              
                            
              <button
                class="fd-button fd-button--transparent"
              >
                Cancel
              </button>
              
                        
            </div>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</div>
`;
